--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
+    "@solana/web3.js": "^1.95.8",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.9",
+    "bip39": "^3.1.0",
+    "bs58": "^6.0.0",
     "fs-extra": "^11.2.0",
     "hono": "^4.6.13",
     "image-to-base64": "^2.2.0",
