--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
+    "child_process": "^1.0.2",
     "fs-extra": "^11.2.0",
     "hono": "^4.6.13",
     "image-to-base64": "^2.2.0",
