--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hono/node-server": "^1.13.7",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.9",
+    "child_process": "^1.0.2",
     "fs-extra": "^11.2.0",
     "hono": "^4.6.13",
     "image-to-base64": "^2.2.0",
